[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph_checkpoint_firestore"
version = "0.1.2"
description = "Google Firestore checkpoint saver implementation for LangGraph"
authors = [{name = "Kamal", email = "skamalj@github.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core",
    "langgraph",
    "google-cloud-firestore"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_checkpoint_firestore"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3